--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header> <!-- Início header -->
-    	<nav class="navbar navbar-expand-sm navbar-dark bg-dark" >
+    	<nav class="navbar navbar-expand-sm navbar-dark bg-black" >
 			<a href="#" class="navbar-brand">Logo</a>
 			<button class="navbar-toggler" data-toggle="collapse" data-target="#nav-target">
 				<span class="navbar-toggler-icon"></span>
@@ -23,10 +23,10 @@
 						<a href="index.html" class="nav-link">Home</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" class="nav-link">Serviços</a>
+						<a href="servicos.html" class="nav-link">Serviços</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" class="nav-link">Contato</a>
+						<a href="pergunte.html" class="nav-link">Pergunte</a>
 					</li>
 				</ul>
 			</div>
@@ -66,6 +66,48 @@
     <section>
 			<h3 class="text-dark text-center">Mais de xxxx clientes satisfeitos</h3>
 		</section>
+
+		<section class="galery">
+			<div class="img-galery">
+				<img src="https://www.significados.com.br/foto/da4f-cor-cinza-significados.jpg">
+			</div>
+			<div class="img-galery">
+				<img src="https://www.significados.com.br/foto/da4f-cor-cinza-significados.jpg">
+			</div>
+			<div class="img-galery">
+				<img src="https://www.significados.com.br/foto/da4f-cor-cinza-significados.jpg">
+			</div>
+			<div class="img-galery">
+				<img src="https://www.significados.com.br/foto/da4f-cor-cinza-significados.jpg">
+			</div>
+			<div class="img-galery">
+				<img src="https://www.significados.com.br/foto/da4f-cor-cinza-significados.jpg">
+			</div>
+			<div class="img-galery">
+				<img src="https://www.significados.com.br/foto/da4f-cor-cinza-significados.jpg">
+			</div>
+			<div class="img-galery">
+				<img src="https://www.significados.com.br/foto/da4f-cor-cinza-significados.jpg">
+			</div>
+			<div class="img-galery">
+				<img src="https://www.significados.com.br/foto/da4f-cor-cinza-significados.jpg">
+			</div>
+			<div class="img-galery">
+				<img src="https://www.significados.com.br/foto/da4f-cor-cinza-significados.jpg">
+			</div>
+			<div class="img-galery">
+				<img src="https://www.significados.com.br/foto/da4f-cor-cinza-significados.jpg">
+			</div>
+			<div class="img-galery">
+				<img src="https://www.significados.com.br/foto/da4f-cor-cinza-significados.jpg">
+			</div>
+			<div class="img-galery">
+				<img src="https://www.significados.com.br/foto/da4f-cor-cinza-significados.jpg">
+			</div>
+		</section>
+
+
+
 
 		<section class="p-2 text-white">
 			<h3>Serviços prestados</h3>
