--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 
 
-		<section class="p-2 text-white">
+		<section class="p-2">
 			<h3>Serviços prestados</h3>
 			<ul>
 				<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
@@ -117,6 +117,11 @@
 				<li>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</li>
 				<li>Laboris nisi ut aliquip ex ea commodo consequat.</li>
 			</ul>
+		</section>
+
+		<section>
+			<h3>Localização</h3>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d70340.75794784259!2d-47.65298397051834!3d-15.646817969781543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a11f627e3fd6b%3A0x954dc6be91d07476!2sParque%20Ecol%C3%B3gico%20dos%20Pequizeiros!5e0!3m2!1spt-BR!2sbr!4v1628725674353!5m2!1spt-BR!2sbr" width="100%" height="200px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 		</section>
 
 	</main> <!-- Fim main -->
