--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
 			<div class="d-flex justify-content-around mb-5" style="flex-wrap: wrap;">
 				
 				<div class="m-2" style="height: 220px;">
-					<h3 class="ml-2">Localização</h3>
+					<h3>Localização</h3>
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d70340.75794784259!2d-47.65298397051834!3d-15.646817969781543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a11f627e3fd6b%3A0x954dc6be91d07476!2sParque%20Ecol%C3%B3gico%20dos%20Pequizeiros!5e0!3m2!1spt-BR!2sbr!4v1628725674353!5m2!1spt-BR!2sbr" width="310px" height="170px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 				</div>
 				
 				<div class="m-2 input-none" style="height: 220px; width: 310px;">
-					<h3 class="ml-2">Pergunte</h3>
+					<h3>Pergunte</h3>
 					<form>
 						<input class="border-bottom mb-2" type="text" name="" required placeholder="Seu Nome" style="border: none;">
 						<input class="border-bottom mb-2" type="email" name="" required placeholder="Seu Email" style="border: none;">
